# corvus

./: .gitignore  .gitmodules  Muninn.slnx  README.md
.github/workflows/: snyk-security.yml
Core/: dllmain.cpp
Core/ControllerLayer/include/: ProcessController.h
Core/ControllerLayer/src/: ProcessController.cpp  SystemController.cpp
Core/ModelLayer/include/: C_WindowsModels.h  MathModels.h  WindowsModels.h
Core/ViewLayer/include/: ViewUtilities.h
DAL/: CMakeLists.txt
DAL/include/: ApiConfig.h  DataUtilities.h  WindowsProvider32.h  WindowsProviderNt.h
DAL/include/phnt/: ntseapi.h
DAL/src/: DataUtilities.c  WindowsProvider32.c  WindowsProviderNt.c
corvus/: Backend32.cpp  Backend32.h  BackendNt.cpp  BackendNt.h  C_WindowsStructures.cd  C_WindowsStructures.h  ControllerState.h  Controllers.cd  IProcessBackend.h  IWindowsBackend.h  MainView.cpp  MainWindow.h  Math.cd  MathObject.cpp  MathObject.h  MathService.cpp  MathService.h  MemoryService.cpp  MemoryService.h  MemoryService32.cpp  MemoryService32.h  MemoryServiceNt.cpp  MemoryServiceNt.h  MemoryStructures.h  ProcessController.cpp  ProcessController.h  ProcessObject.cpp  ProcessObject.h  ProcessStructures.h  SystemController.cpp  SystemController.h  WinUserService.hpp  WindowsProcess.cpp  WindowsProcess.h  WindowsProvider32.cpp  WindowsProvider32.h  WindowsProviderNt.cpp  WindowsProviderNt.h  WindowsStructures.cd  WindowsStructures.h  (+23 more)
